--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -2,6 +2,11 @@
 <div *ngIf="isChildDestroyed">Child component is destroyed!</div>
 <br />
 <br />
+
+<app-child [userName]="userName">
+  <div #contentWrapper>foo</div> <!-- <== Add this -->
+</app-child>
+
 <app-child *ngIf="!isChildDestroyed" [userName]='userName'>
   <div #contentWrapper>foo</div>
 </app-child>
